# Build a static library to link with other subprojects

# library names
lib_LIBRARIES = libxpcockpit.a

# library source files
libxpcockpit_a_SOURCES = handleserver.c xplanebeacon.c serverdata.c

# plugin headers that must go into a distribution
include_HEADERS = handleserver.h xplanebeacon.h serverdata.h
