# Build a static library to link with other subprojects

# library names
lib_LIBRARIES = libxpcockpit.a

# library source files
libxpcockpit_a_SOURCES = handleserver.c xplanebeacon.c serverdata.c dictionary.c iniparser.c check_aircraft.c xplanewxr.c wxrdata.c

# plugin headers that must go into a distribution
include_HEADERS = handleserver.h xplanebeacon.h serverdata.h dictionary.h iniparser.h check_aircraft.h xplanewxr.h wxrdata.h
