# The Program name to build
bin_PROGRAMS=warpblend

# The Sources needed to build the programs
warpblend_SOURCES = warpblend.c warpdata.c warpblendfile.c create_warpmatrix.c create_blendmatrix.c

# The Headers needs to build the programs
noinst_HEADERS= warpblend.h warpdata.h warpblendfile.h create_warpmatrix.h create_blendmatrix.h
