# The Program name to build
bin_PROGRAMS=xparduino

# The Sources needed to build the programs
xparduino_SOURCES = xparduino.c libarduino.c ini.c handleudp.c iniparser.c dictionary.c handleserver.c serverdata.c check_aircraft.c test.c b737_mcp.c

# The Headers needs to build the programs
noinst_HEADERS= xparduino.h libarduino.h ini.h handleudp.h iniparser.h dictionary.h common.h serverdata.h handleserver.h check_aircraft.h test.h b737_mcp.h
