# The Program name to build
bin_PROGRAMS=xparduino

# The Sources needed to build the programs
xparduino_SOURCES = xparduino.c libarduino.c ini.c handleudp.c test.c compass.c

# The Headers needs to build the programs
noinst_HEADERS= xparduino.h libarduino.h ini.h handleudp.h common.h test.h compass.h
