# The Program name to build
bin_PROGRAMS=xppi

# The Sources needed to build the programs
xppi_SOURCES = xppi.c ini.c iniparser.c dictionary.c handleserver.c serverdata.c check_aircraft.c test.c

# The Headers needs to build the programs
noinst_HEADERS= xppi.h ini.h iniparser.h dictionary.h common.h serverdata.h handleserver.h check_aircraft.h test.h
