# The Program name to build
bin_PROGRAMS=xppi

# The Sources needed to build the programs
xppi_SOURCES = xppi.c ini.c iniparser.c dictionary.c handleserver.c serverdata.c check_aircraft.c test.c b737_fmc.c b737_compass.c b737_awm.c b737_yawdamper.c

# The Headers needs to build the programs
noinst_HEADERS= xppi.h ini.h iniparser.h dictionary.h common.h serverdata.h handleserver.h check_aircraft.h test.h b737_fmc.h b737_compass.h b737_awm.h b737_yawdamper.h
