# The Program name to build
bin_PROGRAMS=xpsismo

# The Sources needed to build the programs
xpsismo_SOURCES = xpsismo.c libsismo.c ini.c handleudp.c iniparser.c dictionary.c handleserver.c serverdata.c check_aircraft.c test.c b737_mcp.c b737_efis.c

# The Headers needs to build the programs
noinst_HEADERS= xpsismo.h libsismo.h ini.h handleudp.h iniparser.h dictionary.h common.h serverdata.h handleserver.h check_aircraft.h test.h b737_mcp.h b737_efis.h
