# The Program name to build
bin_PROGRAMS=xpsismo

# The Sources needed to build the programs
xpsismo_SOURCES = xpsismo.c libsismo.c ini.c handleudp.c common.c linear.c test.c b737_mcp.c b737_efis.c b737_mip.c

# The Headers needs to build the programs
noinst_HEADERS= xpsismo.h libsismo.h ini.h handleudp.h common.h linear.h test.h b737_mcp.h b737_efis.h b737_mip.h
