# The Program name to build
bin_PROGRAMS=xpteensy

# The Sources needed to build the programs
xpteensy_SOURCES = xpteensy.c libteensy.c ini.c handleudp.c common.c test.c b737_throttle.c

# The Headers needs to build the programs
noinst_HEADERS= xpteensy.h libteensy.h teensy_config.h ini.h handleudp.h common.h test.h b737_throttle.h
