# Library name
noinst_LIBRARIES = libOpenGCBase.a

# Source file names
libOpenGCBase_a_SOURCES = \
ogcCircleEvaluator.cpp \
ogcFLTKRenderWindow.cpp \
ogcFont.cpp \
ogcFontManager.cpp \
ogcGauge.cpp \
ogcGaugeComponent.cpp \
ogcObject.cpp \
ogcOrderedPair.cpp \
ogcRenderObject.cpp \
ogcRenderWindow.cpp

noinst_HEADERS = \
ogcCircleEvaluator.h \
ogcFLTKRenderWindow.h \
ogcFont.h \
ogcFontManager.h \
ogcGLHeaders.h \
ogcGauge.h \
ogcGaugeComponent.h \
ogcMessages.h \
ogcObject.h \
ogcOrderedPair.h \
ogcRenderObject.h \
ogcRenderWindow.h
