noinst_LIBRARIES = libOpenGCDataSources.a

libOpenGCDataSources_a_SOURCES = \
ogcDataSource.cpp \
ogcXPlaneDataSource.cpp \
serverdata.c \
handleserver.c \
handleudp.c \
udpdata.c \
wxrdata.c

EXTRA_DIST = \
NonFunctional

noinst_HEADERS = \
ogcDataSource.h \
ogcXPlaneDataSource.h \
serverdata.h \
handleserver.h \
handleudp.h \
udpdata.h \
common.h \
wxrdata.h 
