# Library name
noinst_LIBRARIES = libOpenGCGauges.a

# Source file names
libOpenGCGauges_a_SOURCES = \
WXR/ogcWXR.cpp \
WXR/ogcDrawWXR.cpp \
WXR/ogcDrawWXRInfo.cpp \
Dummy/ogcDummyGauge.cpp \
BasicClock/ogcBasicClock.cpp \
BasicClock/ogcBasicClockComponent.cpp \
A320/A320EWD/ogcA320EWD.cpp \
A320/A320EWD/ogcA320EWDBackground.cpp \
A320/A320EWD/ogcA320EWDAnnunciator.cpp \
A320/A320EWD/ogcA320EWDEGT.cpp \
A320/A320EWD/ogcA320EWDEPR.cpp \
A320/A320EWD/ogcA320EWDFF.cpp \
A320/A320EWD/ogcA320EWDFuel.cpp \
A320/A320EWD/ogcA320EWDN1.cpp \
A320/A320EWD/ogcA320EWDN2.cpp \
A320/A320EWD/ogcA320EWDRev.cpp \
A320/A320EWD/ogcA320EWDSlatsFlaps.cpp \
A320/A320ND/ogcA320ND.cpp \
A320/A320ND/ogcA320NDWidget.cpp \
A320/A320ND/ogcA320NDArc.cpp \
A320/A320ND/ogcA320NDIls.cpp \
A320/A320ND/ogcA320NDNav.cpp \
A320/A320ND/ogcA320NDPlan.cpp \
A320/A320ND/ogcA320NDVor.cpp \
A320/A320PFD/ogcA320PFD.cpp \
A320/A320PFD/ogcA320PFDFMA.cpp \
A320/A320PFD/ogcA320PFDAltitudeTape.cpp \
A320/A320PFD/ogcA320PFDAltitudeTicker.cpp \
A320/A320PFD/ogcA320PFDGlideSlopeScale.cpp \
A320/A320PFD/ogcA320PFDAttitude.cpp \
A320/A320PFD/ogcA320PFDHeadingTape.cpp \
A320/A320PFD/ogcA320PFDLocalizerScale.cpp \
A320/A320PFD/ogcA320PFDMiscInfo.cpp \
A320/A320PFD/ogcA320PFDSpeedTape.cpp \
A320/A320PFD/ogcA320PFDVSI.cpp \
A320/A320PFD/ogcA320PFDBackground.cpp \
A320/A320SD/ogcA320SD.cpp \
A320/A320SD/ogcA320SDWidget.cpp \
A320/A320Misc/A320Clock/ogcA320Clock.cpp \
A320/A320Misc/A320Clock/ogcA320ClockComponent.cpp \
A320/A320Misc/A320BrkTripleInd/ogcA320BrkTripleInd.cpp \
A320/A320Misc/A320BrkTripleInd/ogcA320BrkTripleIndDial.cpp \
A320/A320MCDU/ogcA320MCDU.cpp \
A320/A320MCDU/ogcA320MCDUWidget.cpp \
A320/A320Stby/A320StbyAlt/ogcA320StbyAlt.cpp \
A320/A320Stby/A320StbyAlt/ogcA320StbyAltComponent.cpp \
A320/A320Stby/A320StbyASI/ogcA320StbyASI.cpp \
A320/A320Stby/A320StbyASI/ogcA320StbyASIComponent.cpp \
A320/A320Stby/A320StbyAtt/ogcA320StbyAtt.cpp \
A320/A320Stby/A320StbyAtt/ogcA320StbyAttComponent.cpp \
A320/A320Stby/A320StbyISIS/ogcA320StbyISIS.cpp \
A320/A320Stby/A320StbyISIS/ogcA320StbyISISComponent.cpp \
A320/A320Stby/A320StbyRMI/ogcA320StbyRMI.cpp \
A320/A320Stby/A320StbyRMI/ogcA320StbyRMIComponent.cpp \
B737/B737EICAS/ogcB737EICAS.cpp \
B737/B737EICAS/ogcB737EICASBackground.cpp \
B737/B737EICAS/ogcB737EICASEGT.cpp \
B737/B737EICAS/ogcB737EICASFF.cpp \
B737/B737EICAS/ogcB737EICASFuelQ.cpp \
B737/B737EICAS/ogcB737EICASHydP.cpp \
B737/B737EICAS/ogcB737EICASHydQ.cpp \
B737/B737EICAS/ogcB737EICASN1.cpp \
B737/B737EICAS/ogcB737EICASN2.cpp \
B737/B737EICAS/ogcB737EICASOilP.cpp \
B737/B737EICAS/ogcB737EICASOilQ.cpp \
B737/B737EICAS/ogcB737EICASOilT.cpp \
B737/B737EICAS/ogcB737EICASVib.cpp \
B737/B737FMC/ogcB737FMC.cpp \
B737/B737FMC/ogcB737FMCLine.cpp \
B737/B737FMC/ogcB737FMCKey.cpp \
B737/B737MIP/ogcB737MIP.cpp \
B737/B737MIP/ogcB737MIPAnn.cpp \
B737/B737NAV/ogcB737NAV.cpp \
B737/B737NAV/ogcB737NAVDrawWXR.cpp \
B737/B737NAV/ogcB737NAVDrawDEM.cpp \
B737/B737NAV/ogcB737NAVDrawStatic.cpp \
B737/B737NAV/ogcB737NAVDrawStations.cpp \
B737/B737NAV/ogcB737NAVDrawFMC.cpp \
B737/B737NAV/ogcB737NAVDrawTCAS.cpp \
B737/B737NAV/ogcB737NAVMapModeExpanded.cpp \
B737/B737NAV/ogcB737NAVMapModePlan.cpp \
B737/B737PFDSA/ogcB737PFDSA.cpp \
B737/B737PFDSA/ogcB737PFDSAAttitude.cpp \
B737/B737PFDSA/ogcB737PFDSABackground.cpp \
B737/B737PFDSA/ogcB737PFDSACompas.cpp \
B737/B737PFDSA/ogcB737PFDSANav.cpp \
B737/B737PFDSA/ogcB737PFDSASpeedIndicator.cpp \
B737/B737PFD/ogcB737PFDAltitudeTape.cpp \
B737/B737PFD/ogcB737PFDAltitudeTicker.cpp \
B737/B737PFD/ogcB737PFDArtificialHorizon.cpp \
B737/B737PFD/ogcB737PFDBackground.cpp \
B737/B737PFD/ogcB737PFD.cpp \
B737/B737PFD/ogcB737PFDHeadingIndicator.cpp \
B737/B737PFD/ogcB737PFDSpeedTape.cpp \
B737/B737PFD/ogcB737PFDSpeedTicker.cpp \
B737/B737PFD/ogcB737PFDVSI.cpp \
B737/B737CLOCK/ogcB737Clock.cpp \
B737/B737CLOCK/ogcB737ClockComponent.cpp \
B737/B737ISFD/ogcB737ISFDAltitudeTape.cpp \
B737/B737ISFD/ogcB737ISFDAltitudeTicker.cpp \
B737/B737ISFD/ogcB737ISFDArtificialHorizon.cpp \
B737/B737ISFD/ogcB737ISFDBackground.cpp \
B737/B737ISFD/ogcB737ISFD.cpp \
B737/B737ISFD/ogcB737ISFDHeadingIndicator.cpp \
B737/B737ISFD/ogcB737ISFDSpeedTape.cpp \
B737/B737ISFD/ogcB737ISFDSpeedTicker.cpp \
B737/B737RMI/ogcB737RMI.cpp

noinst_HEADERS = \
WXR/ogcWXR.h \
WXR/ogcDrawWXR.h \
WXR/ogcDrawWXRInfo.h \
Dummy/ogcDummyGauge.h \
BasicClock/ogcBasicClock.h \
BasicClock/ogcBasicClockComponent.h \
A320/ogcAirbusColors.h \
A320/A320EWD/ogcA320EWD.h \
A320/A320EWD/ogcA320EWDBackground.h \
A320/A320EWD/ogcA320EWDAnnunciator.h \
A320/A320EWD/ogcA320EWDEGT.h \
A320/A320EWD/ogcA320EWDEPR.h \
A320/A320EWD/ogcA320EWDFF.h \
A320/A320EWD/ogcA320EWDFuel.h \
A320/A320EWD/ogcA320EWDN1.h \
A320/A320EWD/ogcA320EWDN2.h \
A320/A320EWD/ogcA320EWDRev.h \
A320/A320EWD/ogcA320EWDSlatsFlaps.h \
A320/A320ND/ogcA320ND.h \
A320/A320ND/ogcA320NDWidget.h \
A320/A320ND/ogcA320NDArc.h \
A320/A320ND/ogcA320NDIls.h \
A320/A320ND/ogcA320NDNav.h \
A320/A320ND/ogcA320NDPlan.h \
A320/A320ND/ogcA320NDVor.h \
A320/A320PFD/ogcA320PFD.h \
A320/A320PFD/ogcA320PFDFMA.h \
A320/A320PFD/ogcA320PFDAltitudeTape.h \
A320/A320PFD/ogcA320PFDAltitudeTicker.h \
A320/A320PFD/ogcA320PFDGlideSlopeScale.h \
A320/A320PFD/ogcA320PFDAttitude.h \
A320/A320PFD/ogcA320PFDHeadingTape.h \
A320/A320PFD/ogcA320PFDLocalizerScale.h \
A320/A320PFD/ogcA320PFDMiscInfo.h \
A320/A320PFD/ogcA320PFDSpeedTape.h \
A320/A320PFD/ogcA320PFDVSI.h \
A320/A320PFD/ogcA320PFDBackground.h \
A320/A320SD/ogcA320SD.h \
A320/A320SD/ogcA320SDWidget.h \
A320/A320SD/sdeng.c \
A320/A320SD/sdbleed.c \
A320/A320SD/sdpress.c \
A320/A320SD/sdelec.c \
A320/A320SD/sdhyd.c \
A320/A320SD/sdfuel.c \
A320/A320SD/sdapu.c \
A320/A320SD/sdcond.c \
A320/A320SD/sddoor.c \
A320/A320SD/sdwheel.c \
A320/A320SD/sdfctl.c \
A320/A320SD/sdcruise.c \
A320/A320SD/sdsts.c \
A320/A320Misc/A320Clock/ogcA320Clock.h \
A320/A320Misc/A320Clock/ogcA320ClockComponent.h \
A320/A320Misc/A320BrkTripleInd/ogcA320BrkTripleInd.h \
A320/A320Misc/A320BrkTripleInd/ogcA320BrkTripleIndDial.h \
A320/A320MCDU/ogcA320MCDU.h \
A320/A320MCDU/ogcA320MCDUWidget.h \
A320/A320Stby/A320StbyAlt/ogcA320StbyAlt.h \
A320/A320Stby/A320StbyASI/ogcA320StbyASI.h \
A320/A320Stby/A320StbyAtt/ogcA320StbyAtt.h \
A320/A320Stby/A320StbyISIS/ogcA320StbyISIS.h \
A320/A320Stby/A320StbyRMI/ogcA320StbyRMI.h \
B737/ogcBoeingColors.h \
B737/B737EICAS/ogcB737EICAS.h \
B737/B737EICAS/ogcB737EICASBackground.h \
B737/B737EICAS/ogcB737EICASEGT.h \
B737/B737EICAS/ogcB737EICASFF.h \
B737/B737EICAS/ogcB737EICASFuelQ.h \
B737/B737EICAS/ogcB737EICASHydP.h \
B737/B737EICAS/ogcB737EICASHydQ.h \
B737/B737EICAS/ogcB737EICASN1.h \
B737/B737EICAS/ogcB737EICASN2.h \
B737/B737EICAS/ogcB737EICASOilP.h \
B737/B737EICAS/ogcB737EICASOilQ.h \
B737/B737EICAS/ogcB737EICASOilT.h \
B737/B737EICAS/ogcB737EICASVib.h \
B737/B737FMC/ogcB737FMC.h \
B737/B737FMC/ogcB737FMCLine.h \
B737/B737FMC/ogcB737FMCKey.h \
B737/B737MIP/ogcB737MIP.h \
B737/B737MIP/ogcB737MIPAnn.h \
B737/B737NAV/ogcB737NAV.h \
B737/B737NAV/ogcB737NAVDrawWXR.h \
B737/B737NAV/ogcB737NAVDrawDEM.h \
B737/B737NAV/ogcB737NAVDrawStatic.h \
B737/B737NAV/ogcB737NAVDrawStations.h \
B737/B737NAV/ogcB737NAVDrawFMC.h \
B737/B737NAV/ogcB737NAVDrawTCAS.h \
B737/B737NAV/ogcB737NAVMapModeExpanded.h \
B737/B737NAV/ogcB737NAVMapModePlan.h \
B737/B737PFDSA/ogcB737PFDSA.h \
B737/B737PFDSA/ogcB737PFDSAAttitude.h \
B737/B737PFDSA/ogcB737PFDSABackground.h \
B737/B737PFDSA/ogcB737PFDSACompas.h \
B737/B737PFDSA/ogcB737PFDSANav.h \
B737/B737PFDSA/ogcB737PFDSASpeedIndicator.h \
B737/B737PFD/ogcB737PFDAltitudeTape.h \
B737/B737PFD/ogcB737PFDAltitudeTicker.h \
B737/B737PFD/ogcB737PFDArtificialHorizon.h \
B737/B737PFD/ogcB737PFDBackground.h \
B737/B737PFD/ogcB737PFD.h \
B737/B737PFD/ogcB737PFDHeadingIndicator.h \
B737/B737PFD/ogcB737PFDSpeedTape.h \
B737/B737PFD/ogcB737PFDSpeedTicker.h \
B737/B737PFD/ogcB737PFDVSI.h \
B737/B737CLOCK/ogcB737Clock.h \
B737/B737CLOCK/ogcB737ClockComponent.h \
B737/B737ISFD/ogcB737ISFDAltitudeTape.h \
B737/B737ISFD/ogcB737ISFDAltitudeTicker.h \
B737/B737ISFD/ogcB737ISFDArtificialHorizon.h \
B737/B737ISFD/ogcB737ISFDBackground.h \
B737/B737ISFD/ogcB737ISFD.h \
B737/B737ISFD/ogcB737ISFDHeadingIndicator.h \
B737/B737ISFD/ogcB737ISFDSpeedTape.h \
B737/B737ISFD/ogcB737ISFDSpeedTicker.h \
B737/B737RMI/ogcB737RMI.h
