# Program name
bin_PROGRAMS = xpopengc

# Source file names
xpopengc_SOURCES = \
dictionary.c \
iniparser.c \
ogcAppObject.cpp \
main.cpp

noinst_HEADERS = \
dictionary.h \
iniparser.h \
ogcAppObject.h

xpopengc_LDADD = ../gauges/libOpenGCGauges.a ../datasources/libOpenGCDataSources.a ../navigation/libOpenGCNav.a ../base/libOpenGCBase.a
