# Library name
noinst_LIBRARIES = libOpenGCNav.a

# Source file names
libOpenGCNav_a_SOURCES = \
ogcAirportList.cpp \
ogcGeographicHash.cpp \
ogcGeographicObject.cpp \
ogcGeographicObjectList.cpp \
ogcNavDatabase.cpp \
ogcNavaidList.cpp \
ogcFixList.cpp \
ogcTerrainData.cpp \
ogcShorelineData.cpp

noinst_HEADERS = \
ogcAirportList.h \
ogcGeographicHash.h \
ogcGeographicObject.h \
ogcGeographicObjectList.h \
ogcNavDatabase.h \
ogcNavaidList.h \
ogcFixList.h \
ogcTerrainData.h \
ogcShorelineData.h

